--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@
   <link href="/static/fonts/montserrat.css" type="text/css" rel="stylesheet" />
 
   <title>Zeeguu</title>
+
+  <!-- Hotjar Tracking Code for https://zeeguu.org -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2394454,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 </head>
 
 <body>
